--- a/devOpsIsitech/src/components/Terminal/style.css
+++ b/devOpsIsitech/src/components/Terminal/style.css
@@ -1,3 +1,21 @@
 body {
-    background-color: white;
+    background-color: black;
+    color: white;
+}
+
+#console {
+    margin-left: 1rem;
+}
+
+#console-user {
+    display: flex;
+}
+
+#console-input {
+    color: white;
+    background-color: black;
+    border: none;
+    width: 100%;
+    outline: none;
+    font-size: 16px;
 }
