--- a/devOpsIsitech/src/components/Terminal/style.css
+++ b/devOpsIsitech/src/components/Terminal/style.css
@@ -1,6 +1,16 @@
-body {
+#terminal {
+    height: 100vh;
+    width: 100vw;
+}
+
+.dark-mode {
     background-color: black;
     color: white;
+}
+
+.light-mode {
+    background-color: white;
+    color: black;
 }
 
 #console {
@@ -12,8 +22,6 @@ body {
 }
 
 #console-input {
-    color: white;
-    background-color: black;
     border: none;
     width: 100%;
     outline: none;
