fix: 🐛 user interface
line break on help command

--- a/devOpsIsitech/src/components/Terminal/style.css
+++ b/devOpsIsitech/src/components/Terminal/style.css
@@ -15,6 +15,11 @@
 
 #console {
     margin-left: 1rem;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#console-input {
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #console-user {
