fix: 🐛 better ui

--- a/devOpsIsitech/src/components/Terminal/style.css
+++ b/devOpsIsitech/src/components/Terminal/style.css
@@ -16,6 +16,7 @@
 #console {
     margin-left: 1rem;
     font-family: 'Courier New', Courier, monospace;
+    padding: 5rem;
 }
 
 #console-input {
